# openscribe

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.en.md  README.md  dev.sh  docker-compose.cpu.yml  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  setup.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  meeting.py  setting.py  template.py
backend/app/routers/: export.py  llm.py  meetings.py  settings.py  stt.py  system.py  templates.py
backend/app/schemas/: meeting.py  setting.py  stt.py  template.py
backend/app/services/: export_service.py  llm_service.py  notes_service.py  settings_service.py  stt_base.py  stt_clova.py  stt_factory.py  stt_riva.py  stt_whisper.py
backend/app/tasks/: stt_pipeline.py  task_manager.py
docs/: INSTALL.md  SYSTEM.md
src/: App.tsx  main.tsx  theme.tsx
src/api/: client.ts  meetings.ts  settings.ts  templates.ts
src/audio/: AudioPlayerContext.tsx
src/components/: AppShell.tsx  CommandPalette.tsx  CreateMeeting.tsx  Dashboard.tsx  LandingPage.tsx  Logo.tsx  MarkdownRenderer.tsx  PlayerBar.tsx  ProcessingPage.tsx  ResultPage.tsx  SettingsPage.tsx  ds.tsx
src/hooks/: useSSE.ts
src/lib/: format.ts  speakers.ts
src/styles/: globals.css
