[project]
name = "openscribe-backend"
version = "0.1.0"
description = "OpenScribe: open-source AI meeting transcription & notes backend"
license = { text = "MIT" }
authors = [{ name = "Jiyoung Choi" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
whisper = [
    "torch>=2.6.0,<2.7.0",
    "torchvision>=0.21.0,<0.22.0",
    "torchaudio>=2.6.0,<2.7.0",
    "transformers>=4.40.0",
    "pyannote.audio>=3.0.0",
    "pandas>=2.0.0",
]
clova = []
riva = [
    "nvidia-riva-client>=2.14.0",
]
llm = [
    "openai>=1.50.0",
]
export = [
    "weasyprint>=62.0",
    "python-docx>=1.0.0",
    "markdown>=3.5.0",
]
all = [
    "openscribe-backend[whisper,clova,riva,llm,export]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
